--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
     <script src="helper.js"></script>
     <script src="main.js"></script>
+    <!-- <script src="demo.js"></script> -->
   </head>
   <body style="background-color: black;"></body>
 </html>
