--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,20 @@
     <script src="main.js"></script>
     <!-- <script src="demo.js"></script> -->
   </head>
-  <body style="background-color: black;"></body>
+  <body style="background-color: black; color: white;">
+    <p>Developed by Cyril</p>
+    <p>
+      The algorithm looks at all possible valid directions to take and see which
+      path will bring the agent closer to the target using the cartesian
+      distance formula.
+    </p>
+    <p>
+      The problem with this approach that it does not find the shortest path but
+      just a path.
+    </p>
+    <p>
+      GitHub Code
+      <a href="https://github.com/cyrilivargarcia/Path-Finder">Here</a>
+    </p>
+  </body>
 </html>
